--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,3 +24,7 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Build with Jacoco Report
+      run: ./gradlew build jacocoTestReport
+    - name: Codecov
+      run: bash <(curl -s https://codecov.io/bash)
